<resources>

    <!-- Generic Constants -->
    <string name="app_name">Taxi Manager</string>
    <string name="email_hint">emailAddress@example.com</string>

    <!-- Main Screen Constants -->
    <string name="main_screen_email_address">Email address</string>
    <string name="main_screen_password">Password</string>
    <string name="main_screen_login">login</string>
    <string name="main_screen_forgot_password">forget your password?</string>
    <string name="main_screen_login_enter">login</string>
    <string name="main_screen_register_enter">register</string>
    <string name="main_screen_all_right_reserved">All Rights Reserved</string>
    <string name="main_screen_help">Help</string>
    <string name="main_screen_register_link">Don\'t a member yet?</string>
    <string name="main_screen_invalid_credentials">Wrong login or password</string>
    <string name="main_screen_invalid_email">Your email address is invalid, please check it!</string>

    <!-- Register Screen Constants -->
    <string name="register_screen_choose_role">Step 1: Choose Your Role</string>
    <string name="register_screen_fill_information">Step 2: Fill your information</string>
    <string name="register_screen_role_customer">Customer</string>
    <string name="register_screen_role_driver">Driver</string>
    <string name="register_screen_help_choose_role">Help with choose role</string>
    <string name="register_screen_password">Password</string>
    <string name="register_screen_username">Username</string>
    <string name="register_screen_phonenumber">Phone number</string>
    <string name="register_screen_email_hint">Enter your emailAddress</string>
    <string name="register_screen_password_hint">Enter your password</string>
    <string name="register_screen_username_hint">Enter your username</string>
    <string name="register_screen_phone_hint">Enter your phone</string>
    <string name="register_screen_car_color_hint">Enter your car color</string>
    <string name="register_screen_car_model_hint">Enter your car model</string>
    <string name="register_screen_car_number_hint">Enter your car number</string>
    <string name="register_screen_personal_information">Personal information</string>
    <string name="register_screen_car_information">Car information</string>
    <string name="register_screen_car_information_color">Color</string>
    <string name="register_screen_car_information_model">Model</string>
    <string name="register_screen_car_information_number">Number</string>
    <string name="title_activity_customer">Customer\'s Home</string>
    <string name="register_screen_button_next_step">next step</string>

    <!-- Home Screen Constants -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home_todo">You are in home page, please go to\n
        another page by tap on drawer\'s item.</string>

    <!-- Customer Screen Constants -->
    <string name="customer_screen_new_bid">New Bid</string>
    <string name="customer_screen_bids">Bids</string>
    <string name="customer_screen_waiting_bids">Waiting Bids</string>
    <string name="customer_screen_no_bids">No Bids</string>
    <string name="customer_screen_no_bids_choose">Please choose type of bids you want
        to see</string>
    <string name="customer_screen_active_bids">Active Bids</string>
    <string name="customer_screen_completed_bids">Completed Bids</string>
    <string name="customer_screen_canceled_bids">Canceled Bids</string>
    <string name="customer_screen_navigation_menu_my_profile">My Profile</string>
    <string name="customer_screen_navigation_menu_tools">Tools</string>
    <string name="customer_screen_navigation_menu_logout">Log Out</string>
    <string name="customer_screen_title_no_waiting_bids">No Waiting Bids</string>
    <string name="customer_screen_title_no_active_bids">No Active Bids</string>
    <string name="customer_screen_title_no_completed_bids">No Completed Bids</string>
    <string name="customer_screen_title_no_canceled_bids">No Canceled Bids</string>
    <string name="customer_screen_spinners_hint">Choose bids you want to see</string>
    <string name="customer_screen_profile_label_name">Name:</string>
    <string name="customer_screen_profile_label_email">E-mail:</string>
    <string name="customer_screen_profile_label_phone">Phone:</string>
    <string name="customer_screen_profile_edit">Edit</string>
    <string name="customer_screen_profile_save">Save</string>
    <string name="customer_screen_profile_edit_profile">Edit Profile</string>
    <string name="customer_screen_edited_profile_success">Edited profile success!</string>

    <string name="customer_screen_new_bid_from">From</string>
    <string name="customer_screen_new_bid_to">To</string>
    <string name="customer_screen_new_bid_find_path">Find Path</string>
    <string name="customer_screen_new_bid_choose_this_route">Choose this route</string>
    <string name="customer_screen_new_bid_distance" formatted="false">%s Km</string>
    <string name="customer_screen_new_bid_cost" formatted="false">%s $</string>
    <string name="customer_screen_new_bid_time_full" formatted="false">%s hours %s minutes</string>
    <string name="customer_screen_new_bid_time" formatted="false">%s minutes</string>


    <string name="customer_screen_new_bid_from_empty_error">Your point \'From\' is empty,
        please fill it.</string>

    <string name="customer_screen_new_bid_to_empty_error">Your point \'To\' is empty,
        please fill it.</string>

    <!-- Driver Screen Constants -->
    <string name="driver_screen_state_free">free</string>
    <string name="driver_screen_state_busy">busy</string>

    <!-- Preferences Screen Constants -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of
        Android App Development creating new trends across the app space.
        Glad to Help in anyway!</string>
    <string name="app_version">0.1</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose emailAddress client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">
        key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <!-- Error Constants -->
    <string name="no_data_error">No data loaded, please check</string>
    <string name="process_error">During the process an error occurred, please try again.</string>

    <!-- Register Screen Errors -->
    <string name="register_screen_email_exist_error">Your emailAddress already exist,
        please enter another one</string>

    <string name="register_screen_email_incorrect">Your emailAddress is incorrect,
        please enter another one</string>

    <string name="register_screen_email_password_short">Password should be larger than
        6 symbols</string>

    <string name="register_screen_email_username_short">Username should be larger than
        6 symbols</string>

    <string name="register_screen_email_phone_number_short">Phone number should be larger than
        6 symbols</string>

    <string name="register_screen_phone_number_exist_error">Your phone number already exist,
        please enter another one</string>

    <string name="register_screen_error">During the registration an error occurred,
        please try again.</string>

</resources>
