<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginViaEmailRelative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/taxi_background"
    tools:context="com.sergeydeveloper7.taximanager.view.fragments.MainScreenFragment">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separateLoginLineWidth"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeMiddleLarge" />

    <TextView
        android:id="@+id/emailAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginTopVeryLarge"
        android:layout_below="@+id/appNameTextView"
        android:layout_marginTop="@dimen/photoMediaSize"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:letterSpacing="0.14"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeMiddleSmall"
        android:text="@string/main_screen_email_address" />

    <EditText
        android:id="@+id/emailAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shadowLayoutColumnHeight"
        android:layout_marginEnd="@dimen/marginTopVeryLarge"
        android:layout_marginTop="@dimen/marginTopSmall"
        android:layout_marginStart="@dimen/marginTopVeryLarge"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/emailAddressTextView"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:textSize="@dimen/textSize"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_background"/>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginTopVeryLarge"
        android:layout_below="@+id/emailAddressEditText"
        android:layout_marginTop="@dimen/marginTop"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:letterSpacing="0.14"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/textSizeMiddleSmall"
        android:text="@string/main_screen_password" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/marginTopSmall"
        android:layout_marginStart="@dimen/marginTopVeryLarge"
        android:layout_marginEnd="@dimen/marginTopVeryLarge"
        android:layout_height="@dimen/shadowLayoutColumnHeight"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textSize"
        android:ems="10"
        android:textColor="@color/white"
        android:layout_below="@+id/passwordTextView"
        android:inputType="textPassword"
        android:background="@drawable/rounded_background"/>

</RelativeLayout>
