<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context="com.sergeydeveloper7.taximanager.view.fragments.customer.CustomerEditProfileFragment">

    <RelativeLayout
        android:id="@+id/photoRelativeLayout"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/customerProfilePhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:src="@drawable/default_customers_avatar"
            app:civ_border_color="@color/materialYellowAdditional"
            app:civ_border_width="5dp"
            />

        <ImageView
            android:id="@+id/imageViewCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_camera"
            />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editProfileNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/marginNormal"
        android:layout_marginStart="@dimen/marginNormal"
        android:layout_below="@+id/photoRelativeLayout"
        android:theme="@style/TextInputGray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editProfileNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_screen_username"
            android:textColor="@color/grayColor"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editProfileEmailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginNormal"
        android:layout_marginStart="@dimen/marginNormal"
        android:layout_below="@+id/editProfileNameTextInputLayout"
        android:theme="@style/TextInputGray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editProfileEmailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_screen_email_address"
            android:inputType="textPassword"
            android:textColor="@color/grayColor"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginPasswordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginNormal"
        android:layout_marginStart="@dimen/marginNormal"
        android:layout_below="@+id/editProfileEmailTextInputLayout"
        android:theme="@style/TextInputGray">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginPasswordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_screen_phonenumber"
            android:inputType="textPassword"
            android:textColor="@color/grayColor"
            />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
